Fixed Contrast
Fixed the contrast of the text in the modal boxes.

--- a/style.css
+++ b/style.css
@@ -255,7 +255,8 @@ padding: 15px;
   border: solid 3px black;
   border-radius: 10px;
 }
-.close{
+
+.close {
   font-weight: unset;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -267,4 +268,8 @@ padding: 15px;
 }
 .nav-link {
   display: inline;
+}
+
+.text-justify {
+  color: #74777a;
 }
